# FreeLing

./: configure.ac
src/: Makefile.am
src/libsyntaxnet/: Makefile.am  test.cc
